<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/accent"
    tools:context=".QuizFinishActivity">

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/primary_dark"
        tools:ignore="MissingConstraints" />

    <TextView
        style="@style/TextView2"
        android:id="@+id/tv_translated"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:text="@string/good_job"
        android:textColor="@color/primary_text"
        android:textSize="20sp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="@id/view1"
        app:layout_constraintEnd_toEndOf="@id/view1"
        app:layout_constraintStart_toStartOf="@id/view1"
        app:layout_constraintTop_toTopOf="@id/view1"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp" />

    <TextView
        style="@style/TextView1"
        android:id="@+id/tv_congrats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:text="@string/very_good_job"
        android:textColor="@color/primary_text"
        android:textSize="24sp"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:gravity="center"
        android:lines="7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view1" />

    <Button
        style="@style/Button1"
        android:id="@+id/button_back_to_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/back_to_main"
        android:textSize="16sp"
        android:textAlignment="center"
        android:textColor="@color/primary_text"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_congrats" />

</androidx.constraintlayout.widget.ConstraintLayout>